feat: update exercise description for competency 1 in gerer-patrimoine-informatique.html

--- a/bloc_de_competences/gerer-patrimoine-informatique.html
+++ b/bloc_de_competences/gerer-patrimoine-informatique.html
@@ -39,7 +39,8 @@
             </div>
             <div id="c1-formation">
                 <h3>Réalisation en cours de formations</h3>
-                <p>À compléter...</p>
+                <p>Intitulé de l'exercice : Recensement d'un parc informatique avec GLPI</p>
+                <p>Afin de réaliser cet exercice, j'ai ...</p>
                 <img src="https://placehold.co/600x400" alt="describe-your-image" />
             </div>
             <div id="c1-milieu">
