feat: add video tutorial section for Competence 1 in gerer-patrimoine-informatique.html

--- a/bloc_de_competences/gerer-patrimoine-informatique.html
+++ b/bloc_de_competences/gerer-patrimoine-informatique.html
@@ -36,6 +36,9 @@
                 <a href="#c1-milieu">
                     <button>Réalisation en milieu professionnel</button>
                 </a>
+                <a href="#c1-tutoriel">
+                    <button>Tutoriel vidéo</button>
+                </a>
             </div>
             <div id="c1-formation">
                 <h3>Réalisation en cours de formations</h3>
@@ -46,6 +49,11 @@
             <div id="c1-milieu">
                 <h3>Réalisation en milieu professionnel</h3>
                 <p>À compléter...</p>
+            </div>
+            <div id="c1-tutoriel">
+                <h3>Tutoriel vidéo</h3>
+                <p>Dans cette vidéo, je montre comment recenser un parc informatique avec GLPI.</p>
+                <iframe width="600" height="320" src="https://www.youtube.com/embed/whRh1HTCt4s?si=V6WJpK244HGq_mpP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </article>
         <hr>
