feat: update competency 1 description with detailed mission and steps in gerer-patrimoine-informatique.html

--- a/bloc_de_competences/gerer-patrimoine-informatique.html
+++ b/bloc_de_competences/gerer-patrimoine-informatique.html
@@ -48,7 +48,13 @@
             </div>
             <div id="c1-milieu">
                 <h3>Réalisation en milieu professionnel</h3>
-                <p>À compléter...</p>
+                <p>Mission confiée : Recenser le parc informatique de l'entreprise avec GLPI</p>
+                <p>Dans le cadre de mon stage/alternance chez [Nom de l'entreprise], j'ai été chargé de recenser le parc informatique en utilisant l'outil GLPI. Pour ce faire, j'ai suivi les étapes suivantes :</p>
+                <ul>
+                    <li>Installation et configuration de GLPI sur le serveur de l'entreprise.</li>
+                    <li>Importation des données existantes sur le parc informatique.</li>
+                    <li>...</li>
+                </ul>
             </div>
             <div id="c1-tutoriel">
                 <h3>Tutoriel vidéo</h3>
