feat: add LinkedIn share button to gerer-patrimoine-informatique.html

--- a/bloc_de_competences/gerer-patrimoine-informatique.html
+++ b/bloc_de_competences/gerer-patrimoine-informatique.html
@@ -16,6 +16,7 @@
         <li><a href="mettre-a-disposition-service-informatique.html"><button> Bloc 5 - Mettre à disposition des utilisateurs un service informatique</button></a></li>
         <li><a href="organiser-developpement-professionnel.html"><button> Bloc 6 - Organiser son développement professionnel</button></a></li>
     </ul>
+    <a href="http://www.linkedin.com/shareArticle?mini=true&url=https://your-url.com"><button>Partager sur LinkedIn</button></a>
     <section>
         <h1>Bloc 1 - Gérer le patrimoine informatique</h1>
         <ul>
