feat: add Open Graph meta tags for improved social sharing on gerer-patrimoine-informatique.html

--- a/bloc_de_competences/gerer-patrimoine-informatique.html
+++ b/bloc_de_competences/gerer-patrimoine-informatique.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BTS SIO - Gérer le patrimoine informatique</title>
     <meta name="description" content="Portfolio des compétences - Bloc 1 : Gérer le patrimoine informatique">
+    <!--Documentation des balises Open Graph : https://www.linkedin.com/help/learning/answer/a521928?lang=fr-FR-->
+    <meta property='og:title' content='BTS SIO - Gérer le patrimoine informatique'/>
+    <meta property='og:image' content='https://placehold.co/1200x627'/>
+    <meta property='og:description' content='Portfolio des compétences - Bloc 1 : Gérer le patrimoine informatique'/>
+    <meta property='og:url' content='https://your-url.com'/>
 </head>
 <body>
     <a href="../index.html">Retour au Tableau de synthèse</a>
