--- a/bloc_de_competences/gerer-patrimoine-informatique.html
+++ b/bloc_de_competences/gerer-patrimoine-informatique.html
@@ -9,7 +9,8 @@
     <meta property='og:title' content='BTS SIO - Gérer le patrimoine informatique'/>
     <meta property='og:image' content='https://placehold.co/1200x627'/>
     <meta property='og:description' content='Portfolio des compétences - Bloc 1 : Gérer le patrimoine informatique'/>
-    <meta property='og:url' content='https://your-url.com'/>
+    <!--Changer l'url par celui de votre site-->
+    <meta property='og:url' content='https://fredericeducentre.github.io/exemple_section_portfolio_bts_sio/'/>
 </head>
 <body>
     <a href="../index.html">Retour au Tableau de synthèse</a>
@@ -21,7 +22,8 @@
         <li><a href="mettre-a-disposition-service-informatique.html"><button> Bloc 5 - Mettre à disposition des utilisateurs un service informatique</button></a></li>
         <li><a href="organiser-developpement-professionnel.html"><button> Bloc 6 - Organiser son développement professionnel</button></a></li>
     </ul>
-    <a href="http://www.linkedin.com/shareArticle?mini=true&url=https://your-url.com"><button>Partager sur LinkedIn</button></a>
+    <!--Changer l'url par celui de votre site-->
+    <a href="http://www.linkedin.com/shareArticle?mini=true&url=https://fredericeducentre.github.io/exemple_section_portfolio_bts_sio/"><button>Partager sur LinkedIn</button></a>
     <section>
         <h1>Bloc 1 - Gérer le patrimoine informatique</h1>
         <ul>
